--- a/.gitignore
+++ b/.gitignore
@@ -912,3 +912,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,emacs,windows,linux,vs,visualstudiocode,visualstudio,test,node
+
+docs/
