--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Util and simple functions for make our day a little easy",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+	"type": "module",
 	"files": [
 		"/dist"
 	],
@@ -12,14 +13,15 @@
 		"build:docs": "typedoc --options typedoc.json"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3.0.2",
-		"@eslint/js": "^9.1.1",
-		"@typescript-eslint/eslint-plugin": "^7.7.1",
-		"@typescript-eslint/parser": "^7.7.1",
-		"eslint": "^8.57.0",
-		"eslint-config-xo-typescript": "^4.0.0",
-		"globals": "^15.0.0",
+		"eslint": "^9.1.1",
+		"prettier": "^3.2.5",
+		"prettier-eslint": "^16.3.0",
 		"typedoc": "^0.25.13",
 		"typescript": "^5.4.5"
+	},
+	"dependencies": {
+		"@eslint/js": "^9.1.1",
+		"globals": "^15.1.0",
+		"typescript-eslint": "^7.8.0"
 	}
 }
