--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es2019",
+		"baseUrl": "./src",
 		"declaration": true,
 		"outDir": "./dist"
 	},
-	"include": ["src/**/*"]
+	"include": ["src"]
 }
