--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-	"name": "amaze",
-	"version": "0.1.0",
-	"description": "Util and simple functions for make our day a little easy",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"type": "module",
-	"files": [
-		"/dist"
-	],
-	"scripts": {
-		"build:lib": "tsc --project tsconfig.json",
-		"build:docs": "typedoc --options typedoc.json"
-	},
-	"devDependencies": {
-		"eslint": "^9.1.1",
-		"prettier": "^3.2.5",
-		"prettier-eslint": "^16.3.0",
-		"typedoc": "^0.25.13",
-		"typescript": "^5.4.5"
-	},
-	"dependencies": {
-		"@eslint/js": "^9.1.1",
-		"globals": "^15.1.0",
-		"typescript-eslint": "^7.8.0"
-	}
+  "name": "amaze",
+  "version": "0.1.0",
+  "description": "Util and simple functions for make our day a little easy",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "files": [
+    "/dist"
+  ],
+  "scripts": {
+    "build:lib": "npx tsc --project tsconfig.json",
+    "build:docs": "npx typedoc --options typedoc.json",
+    "test": "npx jest"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "eslint": "^9.1.1",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typedoc": "^0.25.13",
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@eslint/js": "^9.1.1",
+    "globals": "^15.1.0",
+    "typescript-eslint": "^7.8.0"
+  }
 }
